--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@walletconnect/web3-provider": "^1.6.6",
     "authereum": "^0.1.14",
+    "axios": "^0.27.2",
     "babel-plugin-styled-components": "^1.13.2",
-    "ethers": "^5.4.7",
+    "ethers": "^5.6.8",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -29,6 +30,7 @@
     "react-vertical-timeline-component": "^3.5.2",
     "styled-components": "^5.3.1",
     "walletlink": "^2.4.7",
+    "web3": "^1.7.3",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
