--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-notifications": "^1.7.3",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
     "react-toastify": "^8.2.0",
